<resources>
    <string name="app_name">FountaneClub</string>
    <string name="name_contact"><![CDATA[NAME &; CONTACT]]></string>
    <string name="you_re_a_club_member">You\'re a Club Member!</string>
    <string name="a_part_of_unique_family_here_at_fountane_clubs_gitam">A part of unique family here at Fountane Clubs Gitam</string>
    <string name="registered">REGISTERED</string>
    <string name="apply_to_become_a_part_of_our_unique_family_at_fountane_clubs_gitam">Apply to become a part of our unique family at Fountane Clubs GITAM.</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="johnman_nequin">Johnman Nequin</string>
    <string name="itsmannequin_look_com">itsmannequin@look.com</string>
    <string name="you_ve_not_applied_yet">You\'ve not applied yet.</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="itsmannequin">\@itsmannequin</string>
    <string name="web">WEB</string>
    <string name="department">DEPARTMENT</string>
    <string name="development">development</string>
    <string name="development1">DEVELOPMENT</string>
    <string name="x">X</string>
    <string name="application_submitted_successfully">Application Submitted Successfully!</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_porta_erat_et_nulla_ornare_eu_sagittis_diam_tempor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat et nulla ornare, eu sagittis diam tempor.</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_suspendisse_porta_erat_et_nulla_ornare_eu_sagittis_diam_tempor">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse porta erat et nulla ornare, eu sagittis diam tempor.</string>
    <string name="check_application_status">CHECK APPLICATION STATUS</string>
    <string name="logo">logo</string>
    <string name="user">user</string>
    <string name="earn_while">EARN WHILE</string>
    <string name="you_learn">YOU LEARN.</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="lines">lines</string>
    <string name="imageview">Imageview</string>
    <string name="resume_name_pdf">resume_name.PDF</string>
    <string name="resume_cv">RESUME/CV</string>
    <string name="upl">+</string>
    <string name="club">club</string>
    <string name="linee">linee</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="john_nauman">John Nauman</string>
    <string name="nequlin">Nequlin</string>
    <string name="itsmannaquein_look_com">itsmannaquein@look.com</string>
    <string name="itsmananquein">itsmananquein</string>
    <string name="college">COLLEGE</string>
    <string name="gitam">GITAM</string>
    <string name="other">OTHER</string>
    <string name="cse">CSE</string>
    <string name="_121710xxxxxx">121710XXXXXX</string>
    <string name="years_of_study">Years of study</string>
    <string name="to">to</string>
    <string name="resume_cv">RESUME/CV</string>
    <string name="save">SAVE</string>
    <string name="company">company</string>
    <string name="userlogo">userlogo</string>
    <string name="linee">linee</string>
    <string name="profilepicture">profilepicture</string>
    <string name="registered">REGISTERED</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="johnman_nequin">Johnman Nequin</string>
    <string name="itsmannequin_look_com">itsmannequin@look.com</string>
    <string name="itsmannequin1">\@itsmannequin</string>
    <string name="grouplogo">grouplogo</string>
    <string name="lineee">lineee</string>
    <string name="applyit">applyit</string>
    <string name="registered">REGISTERED</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="johnman_nequin">Johnman Nequin</string>
    <string name="itsmannequin_look_com">itsmannequin@look.com</string>
    <string name="itsmannequin2">\@itsmannequin</string>
    <string name="you_re_an_applicant">You\'re an Applicant.</string>
    <string name="application_status">Application Status</string>
    <string name="pending_review">PENDING REVIEW</string>
    <string name="our_team_will_get_back_to_you_asap">Our team will get back to you ASAP.</string>
    <string name="underprogress">underprogress</string>
    <string name="registered">REGISTERED</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="johnman_nequin">Johnman Nequin</string>
    <string name="itsmannequin_look_com">itsmannequin@look.com</string>
    <string name="itsmannequin3">\@itsmannequin</string>
    <string name="we_re_sorry">We\'re sorry...</string>
    <string name="sorry">sorry</string>
    <string name="application_status">Application Status</string>
    <string name="rejected">REJECTED</string>
    <string name="we_suggest_re_applying_in_a_different_department_and_vertical">We suggest re-applying in a different Department and Vertical.</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="applying_in">APPLYING IN</string>
    <string name="web_development">WEB DEVELOPMENT</string>
    <string name="_970xxxxxxx">970XXXXXXX</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="gitlab_username">GitLab @UserName</string>
    <string name="college">COLLEGE</string>
    <string name="gitam">GITAM</string>
    <string name="other">OTHER</string>
    <string name="name_of_the_college">Name of the college</string>
    <string name="branch_of_study">Branch of Study</string>
    <string name="student_registration_id">Student Registration ID</string>
    <string name="years_of_study">Years of study</string>
    <string name="to">to</string>
    <string name="save_to_profile">SAVE TO PROFILE</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="succeesfulsubmission">succeesfulsubmission</string>
    <string name="department_of">DEPARTMENT OF</string>
    <string name="user_experience">USER EXPERIENCE</string>
    <string name="experience">experience</string>


</resources>
