<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RejectedApplication">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/company"
            android:id="@+id/brand"
            android:layout_width="162.83dp"
            android:layout_height="48dp"
            android:src="@drawable/flogo"
            android:layout_marginStart="67dp"
            android:layout_marginEnd="145.17dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"/>
        <ImageView
            android:contentDescription="@string/userlogo"
            android:id="@+id/user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/avatar"
            android:layout_marginStart="315dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="22.97dp"
            android:layout_marginEnd="27.98dp"/>
        <ImageView
            android:contentDescription="@string/linee"
            android:id="@+id/threeline"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/line"
            android:background="#FFFFFF"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="328dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="31dp"
            />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:background="@color/white">



        <ImageView
            android:contentDescription="@string/profilepicture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/profilepic"/>

        <TextView
            android:id="@+id/registered"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/registered"
            android:textSize="15sp"
            android:layout_marginStart="246dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/numberstroke"/>

        <TextView
            android:id="@+id/webdevelopment"
            android:layout_width="160dp"
            android:layout_height="30dp"
            android:text="@string/web_development"
            android:textSize="15sp"
            android:layout_marginStart="246dp"
            android:layout_marginTop="65dp"
            android:background="@drawable/numberstroke"
            />
        <Button
            android:id="@+id/editprofile"
            android:layout_width="135dp"
            android:layout_height="30dp"
            android:text="@string/edit_profile"
            android:layout_marginStart="246dp"
            android:paddingStart="4dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="105dp"
            android:textColor="@color/blue"
            android:background="@drawable/numberstroke"
            android:drawableEnd="@drawable/settings"
            />

        <TextView
            android:layout_width="120dp"
            android:layout_height="30dp"
            android:id="@+id/number"
            android:text="@string/_970xxxxxxx"
            android:textSize="15sp"
            android:layout_marginTop="185dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/numberstroke"/>
        <TextView
            android:layout_width="153dp"
            android:layout_height="30dp"
            android:text="@string/johnman_nequin"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="40dp"
            android:layout_marginTop="240dp"/>

        <TextView
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:id="@+id/username"
            android:text="@string/itsmannequin_look_com"
            android:textSize="15sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/numberstroke"/>

        <TextView
            android:id="@+id/profilename"
            android:layout_width="180dp"
            android:layout_height="30dp"
            android:text="@string/itsmannequin3"
            android:textSize="15sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="320dp"
            android:background="@drawable/numberstroke"
            />

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="347dp"
        android:layout_height="343dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/rounded_text1"
        >

        <TextView
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:id="@+id/notapply"
            android:text="@string/we_re_sorry"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="60dp"
            />
        <ImageView
            android:contentDescription="@string/sorry"
            android:layout_width="102dp"
            android:layout_height="72dp"
            android:id="@+id/info"
            android:src="@drawable/rejected"
            android:layout_marginStart="207dp"
            android:layout_marginTop="56dp"/>
        <TextView
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:text="@string/application_status"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="155dp"
            android:layout_marginStart="29dp"
            />
        <Button
            android:id="@+id/rejected"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="190dp"
            android:layout_marginStart="27dp"
            android:textSize="15sp"
            android:text="@string/rejected"
            android:textColor="@color/red"
            android:background="@drawable/roundedwhite"
            />
        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="235dp"
            android:layout_marginEnd="81dp"
            android:text="@string/we_suggest_re_applying_in_a_different_department_and_vertical"
            android:textColor="@color/white"
            android:textSize="15sp"/>
        <Button
            android:id="@+id/apply2"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="285dp"
            android:layout_marginStart="130dp"
            android:textSize="15sp"
            android:text="@string/apply_now"
            android:textColor="@color/blue"
            android:background="@drawable/roundedwhite"
            />


    </RelativeLayout>





</LinearLayout>